evaluation/capybarakv_interface/src/bindings.rs

extern "C" {
    pub fn rocksdb_writebatch_wi_create_iterator_with_base(
        wbwi: *mut rocksdb_writebatch_wi_t,
        base_iterator: *mut rocksdb_iterator_t,
    ) -> *mut rocksdb_iterator_t;
}
extern "C" {
    pub fn rocksdb_writebatch_wi_create_iterator_with_base_cf(
        wbwi: *mut rocksdb_writebatch_wi_t,
        base_iterator: *mut rocksdb_iterator_t,
        cf: *mut rocksdb_column_family_handle_t,
    ) -> *mut rocksdb_iterator_t;
}
extern "C" {
    pub fn rocksdb_block_based_options_create() -> *mut rocksdb_block_based_table_options_t;
}
extern "C" {
    pub fn rocksdb_block_based_options_destroy(options: *mut rocksdb_block_based_table_options_t);
}
extern "C" {
    pub fn rocksdb_block_based_options_set_block_size(
        options: *mut rocksdb_block_based_table_options_t,
        block_size: usize,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_block_size_deviation(
        options: *mut rocksdb_block_based_table_options_t,
        block_size_deviation: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_block_restart_interval(
        options: *mut rocksdb_block_based_table_options_t,
        block_restart_interval: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_index_block_restart_interval(
        options: *mut rocksdb_block_based_table_options_t,
        index_block_restart_interval: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_metadata_block_size(
        options: *mut rocksdb_block_based_table_options_t,
        metadata_block_size: u64,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_partition_filters(
        options: *mut rocksdb_block_based_table_options_t,
        partition_filters: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_use_delta_encoding(
        options: *mut rocksdb_block_based_table_options_t,
        use_delta_encoding: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_filter_policy(
        options: *mut rocksdb_block_based_table_options_t,
        filter_policy: *mut rocksdb_filterpolicy_t,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_no_block_cache(
        options: *mut rocksdb_block_based_table_options_t,
        no_block_cache: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_block_cache(
        options: *mut rocksdb_block_based_table_options_t,
        block_cache: *mut rocksdb_cache_t,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_block_cache_compressed(
        options: *mut rocksdb_block_based_table_options_t,
        block_cache_compressed: *mut rocksdb_cache_t,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_whole_key_filtering(
        arg1: *mut rocksdb_block_based_table_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_format_version(
        arg1: *mut rocksdb_block_based_table_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
pub const rocksdb_block_based_table_index_type_binary_search: _bindgen_ty_1 = 0;
pub const rocksdb_block_based_table_index_type_hash_search: _bindgen_ty_1 = 1;
pub const rocksdb_block_based_table_index_type_two_level_index_search: _bindgen_ty_1 = 2;
pub type _bindgen_ty_1 = ::std::os::raw::c_uint;
extern "C" {
    pub fn rocksdb_block_based_options_set_index_type(
        arg1: *mut rocksdb_block_based_table_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
pub const rocksdb_block_based_table_data_block_index_type_binary_search: _bindgen_ty_2 = 0;
pub const rocksdb_block_based_table_data_block_index_type_binary_search_and_hash: _bindgen_ty_2 = 1;
pub type _bindgen_ty_2 = ::std::os::raw::c_uint;
extern "C" {
    pub fn rocksdb_block_based_options_set_data_block_index_type(
        arg1: *mut rocksdb_block_based_table_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_data_block_hash_ratio(
        options: *mut rocksdb_block_based_table_options_t,
        v: f64,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_hash_index_allow_collision(
        arg1: *mut rocksdb_block_based_table_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_cache_index_and_filter_blocks(
        arg1: *mut rocksdb_block_based_table_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_cache_index_and_filter_blocks_with_high_priority(
        arg1: *mut rocksdb_block_based_table_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_pin_l0_filter_and_index_blocks_in_cache(
        arg1: *mut rocksdb_block_based_table_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_block_based_options_set_pin_top_level_index_and_filter(
        arg1: *mut rocksdb_block_based_table_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_block_based_table_factory(
        opt: *mut rocksdb_options_t,
        table_options: *mut rocksdb_block_based_table_options_t,
    );
}
extern "C" {
    pub fn rocksdb_cuckoo_options_create() -> *mut rocksdb_cuckoo_table_options_t;
}
extern "C" {
    pub fn rocksdb_cuckoo_options_destroy(options: *mut rocksdb_cuckoo_table_options_t);
}
extern "C" {
    pub fn rocksdb_cuckoo_options_set_hash_ratio(
        options: *mut rocksdb_cuckoo_table_options_t,
        v: f64,
    );
}
extern "C" {
    pub fn rocksdb_cuckoo_options_set_max_search_depth(
        options: *mut rocksdb_cuckoo_table_options_t,
        v: u32,
    );
}
extern "C" {
    pub fn rocksdb_cuckoo_options_set_cuckoo_block_size(
        options: *mut rocksdb_cuckoo_table_options_t,
        v: u32,
    );
}
extern "C" {
    pub fn rocksdb_cuckoo_options_set_identity_as_first_hash(
        options: *mut rocksdb_cuckoo_table_options_t,
        v: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_cuckoo_options_set_use_module_hash(
        options: *mut rocksdb_cuckoo_table_options_t,
        v: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_cuckoo_table_factory(
        opt: *mut rocksdb_options_t,
        table_options: *mut rocksdb_cuckoo_table_options_t,
    );
}
extern "C" {
    pub fn rocksdb_set_options(
        db: *mut rocksdb_t,
        count: ::std::os::raw::c_int,
        keys: *const *const ::std::os::raw::c_char,
        values: *const *const ::std::os::raw::c_char,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_set_options_cf(
        db: *mut rocksdb_t,
        handle: *mut rocksdb_column_family_handle_t,
        count: ::std::os::raw::c_int,
        keys: *const *const ::std::os::raw::c_char,
        values: *const *const ::std::os::raw::c_char,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_options_create() -> *mut rocksdb_options_t;
}
extern "C" {
    pub fn rocksdb_options_destroy(arg1: *mut rocksdb_options_t);
}
extern "C" {
    pub fn rocksdb_options_create_copy(arg1: *mut rocksdb_options_t) -> *mut rocksdb_options_t;
}
extern "C" {
    pub fn rocksdb_options_increase_parallelism(
        opt: *mut rocksdb_options_t,
        total_threads: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_optimize_for_point_lookup(
        opt: *mut rocksdb_options_t,
        block_cache_size_mb: u64,
    );
}
extern "C" {
    pub fn rocksdb_options_optimize_level_style_compaction(
        opt: *mut rocksdb_options_t,
        memtable_memory_budget: u64,
    );
}
extern "C" {
    pub fn rocksdb_options_optimize_universal_style_compaction(
        opt: *mut rocksdb_options_t,
        memtable_memory_budget: u64,
    );
}
extern "C" {
    pub fn rocksdb_options_set_allow_ingest_behind(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_allow_ingest_behind(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_set_compaction_filter(
        arg1: *mut rocksdb_options_t,
        arg2: *mut rocksdb_compactionfilter_t,
    );
}
extern "C" {
    pub fn rocksdb_options_set_compaction_filter_factory(
        arg1: *mut rocksdb_options_t,
        arg2: *mut rocksdb_compactionfilterfactory_t,
    );
}
extern "C" {
    pub fn rocksdb_options_compaction_readahead_size(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_get_compaction_readahead_size(arg1: *mut rocksdb_options_t) -> usize;
}
extern "C" {
    pub fn rocksdb_options_set_comparator(
        arg1: *mut rocksdb_options_t,
        arg2: *mut rocksdb_comparator_t,
    );
}
extern "C" {
    pub fn rocksdb_options_set_merge_operator(
        arg1: *mut rocksdb_options_t,
        arg2: *mut rocksdb_mergeoperator_t,
    );
}
extern "C" {
    pub fn rocksdb_options_set_uint64add_merge_operator(arg1: *mut rocksdb_options_t);
}
extern "C" {
    pub fn rocksdb_options_set_compression_per_level(
        opt: *mut rocksdb_options_t,
        level_values: *mut ::std::os::raw::c_int,
        num_levels: usize,
    );
}
extern "C" {
    pub fn rocksdb_options_set_create_if_missing(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_create_if_missing(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_set_create_missing_column_families(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_create_missing_column_families(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_set_error_if_exists(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_error_if_exists(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_set_paranoid_checks(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_paranoid_checks(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_set_db_paths(
        arg1: *mut rocksdb_options_t,
        path_values: *mut *const rocksdb_dbpath_t,
        num_paths: usize,
    );
}
extern "C" {
    pub fn rocksdb_options_set_env(arg1: *mut rocksdb_options_t, arg2: *mut rocksdb_env_t);
}
extern "C" {
    pub fn rocksdb_options_set_info_log(arg1: *mut rocksdb_options_t, arg2: *mut rocksdb_logger_t);
}
extern "C" {
    pub fn rocksdb_options_set_info_log_level(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_info_log_level(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_write_buffer_size(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_get_write_buffer_size(arg1: *mut rocksdb_options_t) -> usize;
}
extern "C" {
    pub fn rocksdb_options_set_db_write_buffer_size(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_get_db_write_buffer_size(arg1: *mut rocksdb_options_t) -> usize;
}
extern "C" {
    pub fn rocksdb_options_set_max_open_files(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_max_open_files(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
